assets/styles/base.css
/* ... */
.global-navbar .sites ul li.new a {
	font-weight: normal;
}

.global-navbar .user {
	width: 175px;
}

.global-navbar .user li ul {
	top: 30px;
}

.global-navbar .user > li > p {
	float: right;
	position: relative;
	padding: 9px 30px 7px 35px;
	background-position: 87% 55%;
	font-size: 12px;
	font-weight: bold;
}

.global-navbar .user:hover > li > p {
	background-position: 87% 50%;
}

.global-navbar .user > li > p .icon {
	background: url("/images/shared/layout/icon-user.png") no-repeat ;
	display: block;
	width: 11px;
	height: 10px;
	position: absolute;
	left: 15px;
	top: 10px;
}

.global-navbar .user:hover > li > p .icon {
	background: url("/images/shared/layout/icon-user-on.png") no-repeat;
}

/**
 *header 
 */
#header {
	color: #707070;
	margin: 5px auto 50px;
	width: 940px;
}
	
#header div.logo {
	border-bottom: 1px solid #D3D3D3;
	float: left;
	height: 109px;
	width: 300px;
	position: relative;
	font-size: 28px;
}

#header div.logo a {
	bottom: 0;
    position: absolute;
    width: 100%;
    text-decoration: none;
    font-size: inherit;
    color: inherit;
}

#header div.logo img {
	max-width: 100%;
}

#header .contextual-navbar {
	float: right;
	width: 620px;
}

#header .contextual-navbar .navigation {
	border-bottom: 1px solid #D3D3D3;
	padding-top: 30px;
	position: relative;
}

#header .navigation .user p {
	background-image: url("/images/shared/markitup/menu.png");
	background-position: right center;
	background-repeat: no-repeat;
}


#header .navigation .business-name {
	font-size: 30px;
	font-weight: lighter;
	letter-spacing: -1px;
	display: inline;
	padding-right: 8px;
	color: #444;
}

#header .navigation .business-name span{
	display: block;
	margin-bottom: 5px;
	font-size: 9px;
	color: #999;
	letter-spacing: normal;
	text-transform: uppercase;
	line-height: 0;
}

#header .navigation .site-url {
	position: absolute;
	right: 0;
	bottom: 0;
	max-width: 300px;
	max-height: 35px;
	text-align: right;
	color: #999;
}

#header .navigation .user {
	float: left;
	font-size: 11px;
	width: 140px;
	margin-left: 20px;
	position: relative;
	height: 37px;
	margin-top: 19px;
}

#header .navigation .user p {
/*	float: left;*/
	padding: 15px 0 0px 10px;
	overflow: hidden;
	height: 21px;
	top: 1px;
/*	width: 90px;*/
	margin-right: 8px;
	position: relative;
	cursor: pointer;

}

#header .navigation .user:hover {
	background-color: #FFF;
	cursor: pointer;
	z-index: 3;
}
#header .navigation .user a {
	color: #42537e;
	display: block;
	float: left;
	font-weight: bold;
	text-align: right;
	text-decoration: none;
	padding: 9px 0 8px 15px;
	margin-top: 6px;
}

#header .navigation .user:hover ul {
	display: block;
}
#header .navigation .user ul {
	position: absolute;
	width: 200px;
	right: 0;
	margin-top: 1px;
	background: #FFF;
	display: none;
    z-index: 3;
    list-style: none;
}
#header .navigation .user li {
	width: 100%;

	margin-left: 0;
	
}
#header .navigation .user li a {
	display: block;
	width: 100%;
	text-align: left; 
	padding: 10px 0 ;
	margin: 0;
	text-indent: 10px;
}
#header .navigation .user a:hover {
	background: #C02926;
	color: #FFF;
	text-shadow: 0 1px 1px rgba(0,0,0,0.5);
}

#header .contextual-navbar ul {
	clear: both;
}

#header .contextual-navbar > ul > li {
	float: left;
	list-style: none;
	margin-left: 20px;
	width: 140px;
}

#header .contextual-navbar ul li:first-child {
	margin-left: 0;
}

.contextual-navbar ul li a, .contextual-navbar ul li p {
	border-bottom: 1px solid #D3D3D3;
	color: #707070;
	display: block;
	font-size: 15px;
	letter-spacing: -0.5px;
	text-decoration: none;
	text-transform: lowercase;
	margin-top: 10px;
	padding: 5px 0 5px 0;
	font-weight: normal;
}

#header .contextual-navbar > ul > li > a:hover {
	background-color: #C02926;
	border-color: #C02926;
	color: #FFF;
	text-shadow: 0 1px 1px rgba(0,0,0,0.5);
}

#header .contextual-navbar .dropdown > li > p {
	position: relative;
}

#header .contextual-navbar .dropdown  li:hover > p {
	border: none;
}

#header .contextual-navbar .dropdown > li ul {
	right: -10px;
	left: auto;
	width: 106%;
}

#header .contextual-navbar .dropdown > li .arrow {
	background: url("/images/shared/markitup/icon-nav-close.png") no-repeat 47% 48%;
	display: inline-block;
	width: 25px;
	height: 25px;
	position: absolute;
	top: 2px;
	right: -10px;
	z-index: 2;
}

#header .contextual-navbar .dropdown > li:hover .arrow {
	background: url("/images/shared/markitup/icon-nav-open.png") no-repeat 47% 48% white;
	box-shadow: -1px 0px 0px 0px #D1D1D1, 1px 0px 0px #D1D1D1;
}

/**
 *content 
 */

.content-wrapp {
	padding-bottom: 150px;
}

#content {
	background: #FFF;
	clear: both;
	margin: 0 auto 50px auto;
	overflow: hidden;
	position: relative;
	width: 940px;
}
#content .slide-elem {
	width: 940px;
	float:left;
	position:relative;
}

#content .page-heading {
	height: 120px;
}

#content h1 {
	border-top: 11px solid #DBDBDB;
	color: #B5B5B5;
	font: lighter 48px "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica,arial,sans-serif;
	height: 60px;
	overflow: hidden;
	letter-spacing: -1px;
	text-transform: lowercase;
}

/**
 *error flash 
 */
#success-feedback,
#error-feedback {
	background: #278740 url(/images/shared/layout/feedback-close.png) 900px 26px no-repeat;
	color: #FFF;
	display: block;
	font: lighter 20px "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica,arial,sans-serif;
	margin: 0 auto;
	margin-bottom: 30px;
	padding: 20px 25px;
	text-decoration: none;
	width: 890px;
}

	#success-feedback:hover {
		background-color: #227738;
	}
	
	#error-feedback {
		background-color: #ed0d0d;
	}
	
	#error-feedback:hover {
		background-color: #be0a0a;
	}
/* ... */

